Fix overflow

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ nav {
   color: #fff;
   flex: none;
   order: 2;
+  padding-right: 90px;
 }
 
 ul {
